# polkit-demo

./: CMakeLists.txt  README.md  com.deepin.polkit.demo.policy  main.cpp
debian/: changelog  control  postinst
demo1/: CMakeLists.txt  main.cpp
demo2/: CMakeLists.txt
demo2/client/: main.cpp
demo2/server/: com.deepin.dde.pokit.demo.conf  com.deepin.dde.pokit.demo.service  dbus_manager.cpp  dbus_manager.h  main.cpp
